--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <!--
-    Discord Username - ray.dev
-    Discord Server - https://dsc.gg/codexdev
+    Discord Username - diff.theog1
+    Discord Server - https://discord.gg/ntop
     Github Repo -
 -->
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Bot Name - Dashboard</title>
+    <title>Axon - Dashboard</title>
     <meta name="description" content="A multi-purpose Bot packed with ULTIMATE Features">
     <meta name="theme-color" content="#00FFFF">
     <link rel="icon" type="image/png" sizes="300x250" href="assets/img/queen.jpeg">
@@ -28,11 +28,11 @@
     </nav>
     </div>
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="assets/img/queen.jpeg" width="150" height="150" style="margin-top: 30px;">
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Bot Name</h1>
+        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Axon</h1>
         <p style="color: var(--secondary-text-color);">A multi-purpose Bot packed with ULTIMATE Features for FREE</p>
-        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://dsc.gg/codexdev" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Button1</a>
-        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://github.com/RayDev07/Discord-Bot-Website-01" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Button2</a>
-        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://youtube.com/@GamerCodeX" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Button3</a>
+        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://dsc.gg/codexdev" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Support Server</a>
+        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://github.com/RayDev07/Discord-Bot-Website-01" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite</a>
+        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://youtube.com/@GamerCodeX" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Premium Soon</a>
 
 
     </header>
@@ -75,7 +75,7 @@
                         <h4 style="color: var(--main-color);margin-top: -6px;">Total Servers</h4>
                     </div>
                     <div class="col-auto col-lg-4 text-center align-self-center pb-5 pt-5 love_counter">
-                        <h1 class="love_count" style="font-size: 70px;"><strong>6969</strong></h1>
+                        <h1 class="love_count" style="font-size: 70px;"><strong>20</strong></h1>
                         <h4 style="color: var(--main-color);margin-top: -6px;">Total Users</h4>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
           <div class="accordion-item">
       <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Standard Commands</span><span class="icon" aria-hidden="true"></span></button>
       <div class="accordion-content">
-        <p>!help - see all bot comands <br> !support - see how to help <br> !help - see all bot commands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands</p>
+        <p>.help - see all bot comands <br> !support - see how to help <br> .help - see all bot commands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> .help - see all bot comands <br>.help - see all bot comands <br> .support - see how to donate to our patreon <br> .help - see all bot comands<br> .help - see all bot comands <br> .support - see how to donate to our patreon <br> .help - see all bot comands <br> .help - see all bot comands <br> .support - see how to donate to our patreon <br> .help - see all bot comands<br> .help - see all bot comands <br> .support - see how to donate to our patreon <br> .help - see all bot comands <br>.help - see all bot comands <br> .support - see how to donate to our patreon <br> .help - see all bot comands</p>
       </div>
     </div>
     <! --- to here :D -- >
@@ -96,7 +96,7 @@
           <div class="accordion-item">
       <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Standard Commands</span><span class="icon" aria-hidden="true"></span></button>
       <div class="accordion-content">
-        <p>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands</p>
+        <p>.help - see all bot commands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands<br> !help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands <br>!help - see all bot comands <br> !support - see how to donate to our patreon <br> !help - see all bot comands</p>
       </div>
     </div>
     <! --- to here :D -- >
@@ -139,4 +139,4 @@
     <script src="assets/js/untitled.js"></script>
 </body>
 
-</html>
+    </html>
